# CryptoVault-

./: .gitignore  BLOCKCHAIN_TEST_QUICKSTART.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_COMPLETE.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_SUMMARY.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
docs/: api_reference.md  blockchain_api.md  file_encryption_api.md  security_analysis.md  testing_guide.md
docs/algorithms/: aes_gcm.md  argon2.md  chacha20.md  ecdh.md  ecdsa.md  key_wrapping.md  merkle_tree.md  pbkdf2.md  proof_of_work.md  sha256.md  totp.md
docs/crypto_docs/: asymmetric_cryptography–RSA_deep_dive.md  block_ciphers_and_applications.md  cryptographic_protocols_in_web_development.md  cryptography_in_blockchain.md  cryptography_in_mobile_applications.md  digital_signatures.md  hash_functions_and_data_integrity.md  key_exchange_and_protocols.md  public_key_cryptography_and_asymmetric_encryption.md  quantum_cryptography_and_post-auantum.md  stream_ciphers_and_modern_symmetric_encryption.md
src/: exceptions.py
src/auth/: __init__.py  auth_module.py  backup_codes.py  password_hasher.py  password_reset.py  password_validator.py  rate_limiter.py  session_manager.py  totp.py
src/blockchain/: __init__.py  block.py  blockchain_module.py  chain_reorganizer.py  chain_validator.py  merkle_tree.py  proof_of_work.py  transaction_verifier.py
src/file_encryption/: __init__.py  file_encryption_module.py  file_encryptor.py  file_integrity.py  file_operations.py  file_sharing.py  key_derivation.py  key_wrapping.py  metadata_encryption.py
src/ledger/: audit_logger.py
src/messaging/: __init__.py  group_manager.py  key_exchange.py  message_encryptor.py  message_signer.py  messaging_module.py
tests/: test_group.py  test_messaging_flow.py
tests/integration/: BLOCKCHAIN_TESTS_README.md  README.md  conftest.py  test_auth_flow.py  test_blockchain_flow.py  test_file_encryption_flow.py
tests/integration/blockchain/: conftest.py
tests/unit/auth/: conftest.py  test_auth_module.py
tests/unit/blockchain/: conftest.py  test_blockchain_module.py
tests/unit/file_encryption/: conftest.py  test_file_encryption_module.py
tests/unit/messaging/: test_units.py
